# keccak-vhdl

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh  configure.sh  test.sh
icore2/src/: gamma_s.vhdl  gamma_stack.vhdl  rho_buffer.vhdl  types.vhdl
sha3-c/: CMakeLists.txt
sha3-c/calculator/: CMakeLists.txt
sha3-c/calculator/src/: calculator.cpp
sha3-c/include/sha3/: keccak_p.h  sha3.h  sha_pad.h  util.h
sha3-c/sha-lib/: CMakeLists.txt
sha3-c/sha-lib/include/sha3/: keccak_p.h
sha3-c/sha-lib/src/: keccak_p.cpp  keccak_p_inplace.cpp  sha3.cpp
sha3-c/sha-lib/test/: CMakeLists.txt
sha3-c/src/: keccak_p.cpp  sha3.cpp  util.cpp
sha3-c/test/: CMakeLists.txt  manualTest.cpp  test_keccak_p.cpp
sha3-c/tracer/: CMakeLists.txt
sha3-c/tracer/src/: tracer.cpp
sha3-icore/: build.sh  build_bc_assembly.sh  clean  compile  evaluate  runtest  test.sh
sha3-icore/bc assembly/: notes.txt  pseudocode.txt  sha3.bc
sha3-icore/bc_assembly/: dynamic_iteration.bc  pseudocode.txt  step_0.bc  step_1.bc  step_10.bc  step_11.bc  step_12.bc  step_13.bc  step_14.bc  step_15.bc  step_16.bc  step_17.bc  step_2.bc  step_3.bc  step_4.bc  step_5.bc  step_6.bc  step_7.bc  step_8.bc  step_9.bc
sha3-icore/simulation/: slice_memory_wrapper.vhdl
sha3-icore/src/: atom.vhdl  buffer_chunk_visualizer.vhdl  dynamic_iterator_atom.vhdl  functions.vhdl  gamma_slice.vhdl  icore_util.vhdl  reorder_atom.vhdl  rho_shift_buffer.vhd  rho_shift_buffer.vhdl  sha3_atom.vhdl  (+12 more)
sha3-vhdl/: build.sh  rho_test.make  theta_test.make
src/: keccak.cpp
test_instances/: raw_state_arrays.txt
(+128 files in other folders)
